# DjangoTestContainer

./: README.md  manage.py  pyproject.toml
DjangoTestContainer/: asgi.py  settings.py  urls.py  wsgi.py
myapp/: conftest.py  models.py
myapp/migrations/: 0001_initial.py
myapp/test/: test_cache.py  test_car.py
